abi/body_layer.h


typedef enum {
    BL_OK              = 0,
    BL_REFUSE          = 1,  
    BL_EINVAL          = 2,
    BL_EVERSION        = 3,  
    BL_ENOSPACE        = 4,
    BL_EINTERNAL       = 5
} bl_status;
typedef enum {
    BL_AXIS_INTERVAL    = 0,  
    BL_AXIS_CATEGORICAL = 1,  
    BL_AXIS_UNMEASURED  = 2   
} bl_axis_kind;
typedef struct {
    uint32_t quantity;                 
    uint32_t dim;                      
    uint32_t axis_kind[BL_MAX_DIM];    
    double   value[BL_MAX_DIM];
    double   uncertainty[BL_MAX_DIM];  
    double   valid_lo[BL_MAX_DIM];     
    double   valid_hi[BL_MAX_DIM];     
    uint64_t measured_at_ns;           
    uint64_t valid_for_ns;             
    uint32_t n_deps;
    uint32_t deps[BL_MAX_DEPS];        
    uint64_t dep_epoch[BL_MAX_DEPS];   
    uint64_t epoch;                    
    uint32_t selftest_passed;          
    uint64_t prev_epoch;               
} bl_measurement;
typedef struct {
    double   u, v;        
    double   extent;      
    uint32_t verb;        
    double   manner;      
    uint64_t frame_id;    
} bl_world_ref;
typedef struct {
    double dir[3];      
    double drot[3];     
    double grip;        
    double base[3];     
} bl_policy_out;
typedef struct bl_body bl_body;
size_t bl_sizeof_body(void);
size_t bl_alignof_body(void);
bl_status bl_init(void *storage, size_t len, uint32_t abi_version);
void      bl_close(bl_body *b);
bl_status bl_measure(bl_body *b, const bl_measurement *m);
bl_status bl_get(const bl_body *b, uint32_t quantity, bl_measurement *out);
bl_status bl_admit(const bl_body *b, const bl_world_ref *ref,
                   uint32_t *why, char detail[BL_REASON_LEN]);
typedef struct {
    double   step_m;      
    uint32_t period_ms;   
    double   damping;     
    uint32_t n_joints;    
} bl_spec;
bl_status bl_execute(bl_body *b, const bl_policy_out *intent, const bl_spec *spec,
                     uint32_t now_ms, double *joint_cmd, uint32_t *outcome);
bl_status bl_selftest(const bl_body *b, uint64_t *mask);
size_t    bl_save_max_bytes(void);
bl_status bl_save(const bl_body *b, uint8_t *buf, size_t cap, size_t *written);
bl_status bl_load(bl_body *b, const uint8_t *buf, size_t len);
bl_status bl_measure_plan(const bl_body *b, uint64_t now_ns,
                          uint32_t *quantities, uint32_t *needs, size_t cap, size_t *n);
uint32_t  bl_debt_total(void);
uint32_t  bl_debt_outstanding(void);
bl_status bl_debt_line(uint32_t i, char *buf, size_t cap);
typedef enum {
    BL_OPENS_NEW_TASK           = 0,  
    BL_OPENS_UNRECOGNISED_PLACE = 1,  
    BL_OPENS_BODY_CHANGED       = 2   
} bl_memory_event;
size_t    bl_memory_sizeof(void);
size_t    bl_memory_alignof(void);
bl_status bl_memory_init(void *storage, size_t len, uint32_t scope, uint32_t abi_version);
bl_status bl_memory_declare(void *m, const char *name, uint32_t pins, uint32_t *why);
bl_status bl_memory_observed(void *m);
bl_status bl_memory_write(void *m, const char *name, const char *value,
                          uint32_t durability, uint32_t *why);
bl_status bl_memory_get(const void *m, const char *name, char *out, size_t cap, uint32_t *why);
bl_status bl_memory_event(void *m, uint32_t event, uint32_t *cleared);
bl_status bl_memory_stats(const void *m, uint64_t *observations, uint64_t *unreadable,
                          uint64_t *refused_perishable, uint32_t *filled, uint32_t *declared);
bl_status bl_place_matches(const uint8_t *a, double a_confidence,
                           const uint8_t *b, double b_confidence, uint32_t *out);
typedef struct {
    double   u;                  
    double   v;
    double   extent;             
    uint32_t at_period;          
    double   sigma_uv;           
    uint32_t verified_periods;   
} bl_predicted;
bl_status bl_predict_horizon(const void *b, double distance_m, double tol_frac,
                             uint32_t *out, uint32_t *why);
bl_status bl_predict_admit(const bl_predicted *p, uint32_t need_periods,
                           double tol_uv, uint32_t has_tol,
                           uint32_t *why, char detail[BL_REASON_LEN]);
bl_status bl_predict_admit_chase(const void *b, const bl_predicted *p, double distance_m,
                                 double tol_frac, double tol_uv, uint32_t has_tol,
                                 uint32_t *why, char detail[BL_REASON_LEN]);
const char *bl_reason_str(uint32_t why);
const char *bl_quantity_str(uint32_t quantity);
const char *bl_need_str(uint32_t need);