bind/python/body_layer.py

"""body layer — Python binding over the stable C ABI.  ctypes only, no dependencies.

WHY THIS FILE EXISTS.  On 2026-08-09 a grep answered the question "who reads the body layer?" with
**zero**.  The running teacher is Python; this layer is Rust behind a C ABI; and the distance
between those two facts was the entire reason a library with 40 passing tests was not connected to
anything.  A C ABI that half the field can consume in principle and nobody consumes in practice is
a header file.

WHAT IT DELIBERATELY DOES NOT DO.  It does not re-declare the enums.  Every name table below is
built at import time by asking the library (`bl_quantity_str`, `bl_reason_str`, `bl_need_str`),
because a second copy of an enum in another language is a copy that drifts, and the drift is silent:
both sides keep returning success while meaning different things.  `Quantity.NAMES` is therefore
whatever the linked library says it is, and cannot disagree with it.

Usage:

    from body_layer import BodyLayer, Quantity
    bl = BodyLayer()                      # loads the cdylib, checks the ABI version
    body = bl.new_body()
    for q, need in body.plan(now_ns):     # what this machine still owes itself
        m = run_my_probe(q)               # your rig's probing code
        body.measure(m)                   # refused unless it carries its own provenance
"""

import ctypes
import os
import sys

ABI_VERSION = 2
MAX_DIM = 48
MAX_DEPS = 8
MAX_JOINTS = 16
REASON_LEN = 96

OK, REFUSE, EINVAL, EVERSION, ENOSPACE, EINTERNAL = range(6)
STATUS_NAMES = {
    OK: "ok",
    REFUSE: "refuse",
    EINVAL: "einval",
    EVERSION: "eversion",
    ENOSPACE: "enospace",
    EINTERNAL: "einternal",
}

_HERE = os.path.dirname(os.path.abspath(__file__))
_ROOT = os.path.abspath(os.path.join(_HERE, "..", ".."))


def _default_lib():
    stem = "libbody_layer"
    ext = ".dylib" if sys.platform == "darwin" else ".so"
    for profile in ("release", "debug"):
        p = os.path.join(_ROOT, "slow", "target", profile, stem + ext)
        if os.path.exists(p):
            return p
    raise OSError(
        "no built cdylib found under slow/target/{release,debug}. Build it:\n"
        "  cd slow && cargo build --release"
    )


class Measurement(ctypes.Structure):
    """Mirror of `bl_measurement`.  Field order and types match the header exactly.

    🔴 There is no constructor that fills in a default uncertainty, a default validity window, or a
    passing self-test.  A measurement that cannot say how well it knows itself is exactly the bare
    f64 this layer exists to abolish, and `bl_measure` refuses it.
    """

    _fields_ = [
        ("quantity", ctypes.c_uint32),
        ("dim", ctypes.c_uint32),
        # bl_axis_kind per axis: 0 interval, 1 categorical, 2 unmeasured. Zero is what a
        # zero-initialised struct gets, which is exactly the behaviour from before this field.
        ("axis_kind", ctypes.c_uint32 * MAX_DIM),
        ("value", ctypes.c_double * MAX_DIM),
        ("uncertainty", ctypes.c_double * MAX_DIM),
        ("valid_lo", ctypes.c_double * MAX_DIM),
        ("valid_hi", ctypes.c_double * MAX_DIM),
        ("measured_at_ns", ctypes.c_uint64),
        ("valid_for_ns", ctypes.c_uint64),
        ("n_deps", ctypes.c_uint32),
        ("deps", ctypes.c_uint32 * MAX_DEPS),
        ("dep_epoch", ctypes.c_uint64 * MAX_DEPS),
        ("epoch", ctypes.c_uint64),
        ("selftest_passed", ctypes.c_uint32),
        ("prev_epoch", ctypes.c_uint64),
    ]


class WorldRef(ctypes.Structure):
    """Mirror of `bl_world_ref` — the entire vocabulary any VLM or world model may use.

    Look at what is absent: no z, no pose, no object id, no task id.  A pointer that cannot express
    a pose cannot leak one, and that absence is the invariant, not an oversight.
    """

    _fields_ = [
        ("u", ctypes.c_double),
        ("v", ctypes.c_double),
        ("extent", ctypes.c_double),
        ("verb", ctypes.c_uint32),
        ("manner", ctypes.c_double),
        ("frame_id", ctypes.c_uint64),
    ]


class PolicyOut(ctypes.Structure):
    """Mirror of `bl_policy_out`.  `dir` is a UNIT vector: how far to travel is the body's business.

    Magnitude is derivable from proprioception, so it is a shortcut; direction is not.  The library
    rejects a non-unit vector rather than normalising it, because silently normalising would let a
    policy encode distance in the magnitude and put the shortcut straight back.
    """

    _fields_ = [
        ("dir", ctypes.c_double * 3),
        ("drot", ctypes.c_double * 3),
        ("grip", ctypes.c_double),
        ("base", ctypes.c_double * 3),
    ]


class Spec(ctypes.Structure):
    """Mirror of `bl_spec`.

    ⚠️ `step_m` and `damping` are the two hand-set body constants this layer still carries; they are
    row entries in the ledger (`BodyLayer.debt()`), not a clean part of the design.
    """

    _fields_ = [
        ("step_m", ctypes.c_double),
        ("period_ms", ctypes.c_uint32),
        ("damping", ctypes.c_double),
        ("n_joints", ctypes.c_uint32),
    ]


X_MOVE, X_REFUSED, X_HALTED, X_BAD_INTENT = range(4)


class Quantity:
    """Names filled in at import from the linked library.  Never re-typed here."""

    NAMES = {}
    IDS = {}


class Reason:
    NAMES = {}


class Need:
    NAMES = {}


class BodyLayer:
    """The loaded library."""

    def __init__(self, path=None):
        self.path = path or _default_lib()
        self.lib = ctypes.CDLL(self.path)
        L = self.lib
        L.bl_sizeof_body.restype = ctypes.c_size_t
        L.bl_alignof_body.restype = ctypes.c_size_t
        L.bl_init.argtypes = [ctypes.c_void_p, ctypes.c_size_t, ctypes.c_uint32]
        L.bl_init.restype = ctypes.c_uint32
        L.bl_close.argtypes = [ctypes.c_void_p]
        # the thin OS's memory -- the same caller-owned-storage discipline as the body
        u32p, u64p = ctypes.POINTER(ctypes.c_uint32), ctypes.POINTER(ctypes.c_uint64)
        L.bl_predict_horizon.argtypes = [ctypes.c_void_p, ctypes.c_double, ctypes.c_double,
                                         u32p, u32p]
        L.bl_predict_horizon.restype = ctypes.c_uint32
        L.bl_predict_admit.argtypes = [ctypes.POINTER(Predicted), ctypes.c_uint32,
                                       ctypes.c_double, ctypes.c_uint32, u32p, ctypes.c_char_p]
        L.bl_predict_admit.restype = ctypes.c_uint32
        L.bl_predict_admit_chase.argtypes = [ctypes.c_void_p, ctypes.POINTER(Predicted),
                                            ctypes.c_double, ctypes.c_double, ctypes.c_double,
                                            ctypes.c_uint32, u32p, ctypes.c_char_p]
        L.bl_predict_admit_chase.restype = ctypes.c_uint32
        L.bl_memory_sizeof.restype = ctypes.c_size_t
        L.bl_memory_alignof.restype = ctypes.c_size_t
        L.bl_memory_init.argtypes = [ctypes.c_void_p, ctypes.c_size_t, ctypes.c_uint32,
                                     ctypes.c_uint32]
        L.bl_memory_init.restype = ctypes.c_uint32
        L.bl_memory_declare.argtypes = [ctypes.c_void_p, ctypes.c_char_p, ctypes.c_uint32, u32p]
        L.bl_memory_declare.restype = ctypes.c_uint32
        L.bl_memory_observed.argtypes = [ctypes.c_void_p]
        L.bl_memory_observed.restype = ctypes.c_uint32
        L.bl_memory_write.argtypes = [ctypes.c_void_p, ctypes.c_char_p, ctypes.c_char_p,
                                      ctypes.c_uint32, u32p]
        L.bl_memory_write.restype = ctypes.c_uint32
        L.bl_memory_get.argtypes = [ctypes.c_void_p, ctypes.c_char_p, ctypes.c_char_p,
                                    ctypes.c_size_t, u32p]
        L.bl_memory_get.restype = ctypes.c_uint32
        L.bl_memory_event.argtypes = [ctypes.c_void_p, ctypes.c_uint32, u32p]
        L.bl_memory_event.restype = ctypes.c_uint32
        L.bl_memory_stats.argtypes = [ctypes.c_void_p, u64p, u64p, u64p, u32p, u32p]
        L.bl_memory_stats.restype = ctypes.c_uint32
        L.bl_place_matches.argtypes = [ctypes.c_char_p, ctypes.c_double, ctypes.c_char_p,
                                       ctypes.c_double, u32p]
        L.bl_place_matches.restype = ctypes.c_uint32
        L.bl_measure.argtypes = [ctypes.c_void_p, ctypes.POINTER(Measurement)]
        L.bl_measure.restype = ctypes.c_uint32
        L.bl_get.argtypes = [ctypes.c_void_p, ctypes.c_uint32, ctypes.POINTER(Measurement)]
        L.bl_get.restype = ctypes.c_uint32
        L.bl_admit.argtypes = [
            ctypes.c_void_p,
            ctypes.POINTER(WorldRef),
            ctypes.c_uint64,
            ctypes.POINTER(ctypes.c_uint32),
            ctypes.c_char_p,
        ]
        L.bl_admit.restype = ctypes.c_uint32
        L.bl_selftest.argtypes = [ctypes.c_void_p, ctypes.POINTER(ctypes.c_uint64)]
        L.bl_selftest.restype = ctypes.c_uint32
        L.bl_execute.argtypes = [
            ctypes.c_void_p,
            ctypes.POINTER(PolicyOut),
            ctypes.POINTER(Spec),
            ctypes.c_uint32,
            ctypes.POINTER(ctypes.c_double),
            ctypes.POINTER(ctypes.c_uint32),
        ]
        L.bl_execute.restype = ctypes.c_uint32
        L.bl_save_max_bytes.restype = ctypes.c_size_t
        L.bl_save.argtypes = [
            ctypes.c_void_p,
            ctypes.POINTER(ctypes.c_uint8),
            ctypes.c_size_t,
            ctypes.POINTER(ctypes.c_size_t),
        ]
        L.bl_save.restype = ctypes.c_uint32
        L.bl_load.argtypes = [ctypes.c_void_p, ctypes.POINTER(ctypes.c_uint8), ctypes.c_size_t]
        L.bl_load.restype = ctypes.c_uint32
        L.bl_measure_plan.argtypes = [
            ctypes.c_void_p,
            ctypes.c_uint64,
            ctypes.POINTER(ctypes.c_uint32),
            ctypes.POINTER(ctypes.c_uint32),
            ctypes.c_size_t,
            ctypes.POINTER(ctypes.c_size_t),
        ]
        L.bl_measure_plan.restype = ctypes.c_uint32
        L.bl_debt_total.restype = ctypes.c_uint32
        L.bl_debt_outstanding.restype = ctypes.c_uint32
        L.bl_debt_line.argtypes = [ctypes.c_uint32, ctypes.c_char_p, ctypes.c_size_t]
        L.bl_debt_line.restype = ctypes.c_uint32
        for fn in ("bl_reason_str", "bl_quantity_str", "bl_need_str"):
            getattr(L, fn).argtypes = [ctypes.c_uint32]
            getattr(L, fn).restype = ctypes.c_char_p
        self._fill_names()

    def _fill_names(self):
        """Ask the library what its enums are.  Walking until 'unknown' means adding a quantity in
        Rust needs no edit here, and — more importantly — REMOVING one cannot leave a stale Python
        name pointing at a different id."""
        for table, fn in (
            (Quantity.NAMES, self.lib.bl_quantity_str),
            (Reason.NAMES, self.lib.bl_reason_str),
            (Need.NAMES, self.lib.bl_need_str),
        ):
            i = 0
            while True:
                name = fn(i).decode()
                if name == "unknown":
                    break
                table[i] = name
                i += 1
                if i > 256:  # a runaway would mean bl_*_str never says 'unknown'
                    raise RuntimeError("enum walk did not terminate")
        Quantity.IDS = {v: k for k, v in Quantity.NAMES.items()}

    def new_body(self):
        return Body(self)

    def predict_horizon(self, body, distance_m, tol_frac=0.01):
        """-> (periods, reason).  How long THIS body is blind while it covers that distance.

        From the body's own measured delivery, never from a guess — which is the half the conveyor
        loop never asked for.
        """
        out, why = ctypes.c_uint32(0), ctypes.c_uint32(0)
        st = self.lib.bl_predict_horizon(body._ptr, float(distance_m), float(tol_frac),
                                         ctypes.byref(out), ctypes.byref(why))
        if st != OK:
            return None, Reason.NAMES.get(why.value, "unknown")
        return out.value, "none"
